--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					Modo: Solo
 				</span>
 									
-				<button onclick="start()">Inicia</button>
+				<button onclick="restart()">Inicia</button>
 				
 			</section>
 		</div>
