adicinando palavra e dica randomicamente

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				</span>
 									
 				<button onclick="start()">Inicia</button>
-				<button onclick="restart()">Restart</button>
+				<button onclick="proximo()">Proximo</button>
 				
 			</section>
 		</div>
