--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 
 <body>
 	<div class="container">
+		<h1>Jogo da Forca</h1>
 		<div class="display">
 			<div class="personagem">
 				<canvas id="tela" width="100" height="200"></canvas>
 			</div>
 
 			<div id="dicas">
-				Dica:
-				<div id="dica"></div>
+				DICA:
+				<div></div>
 			</div>
 		</div>
 
 		<div id="local-palavra"></div>
 
-		<div class="keyboard">
 			<div class="teclado">
 				<section class="tecla">
 					<button class="key" id="a" onclick="verificar('a')">A</button>
@@ -63,7 +63,6 @@
 					<button class="key" id="y" onclick="verificar('y')">Y</button>
 					<button class="key" id="z" onclick="verificar('z')">Z</button>
 				</section>
-			</div>
 		</div>
 
 		<div class="menu">
