--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
 					Modo: Solo
 				</span>
 									
-				<button onclick="start()">Inicia</button>
+				<button id="start" onclick="start()">Inicia</button>
 				<button onclick="proximo()">Proximo</button>
-				
 			</section>
 		</div>
 	</div>
